[gd_scene load_steps=4 format=3 uid="uid://bdpnxnlxq2qir"]

[ext_resource type="Script" uid="uid://b5va0ddaevia8" path="res://scripts/DialogueSystem.gd" id="1_qt5aw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65u4t"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qt5aw"]
font_size = 24

[node name="DialogueSystem" type="CanvasLayer"]
script = ExtResource("1_qt5aw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialoguePanel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_65u4t")

[node name="MarginContainer" type="MarginContainer" parent="Control/DialoguePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainHBox" type="HBoxContainer" parent="Control/DialoguePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitRect" type="TextureRect" parent="Control/DialoguePanel/MarginContainer/MainHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TextVBox" type="VBoxContainer" parent="Control/DialoguePanel/MarginContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="Control/DialoguePanel/MarginContainer/MainHBox/TextVBox"]
layout_mode = 2
label_settings = SubResource("LabelSettings_qt5aw")

[node name="DialogueText" type="RichTextLabel" parent="Control/DialoguePanel/MarginContainer/MainHBox/TextVBox"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
